--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -6,7 +6,7 @@
 
 .hero {
   height: 100%;
-  background-image: url("../../assests/images/london.jpeg"),
+  background-image: url("../../assests/images/los angeles.jpeg"),
     linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
   background-size: cover;
   height: 100vh;
@@ -18,7 +18,7 @@
 
   &__card {
     background: whitesmoke;
-    width: 80%;
+    width: 60%;
     height: 30%;
     display: flex;
     justify-content: center;
@@ -26,11 +26,12 @@
     flex-direction: column;
     border-radius: 25px;
     padding: 10px;
+    margin-top: 90px;
     box-shadow: #afafaf 2px 2px;
   }
 
   &__heading {
-    font-family: Georgia, "Times New Roman", Times, serif sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
     font-size: 24px;
     padding-bottom: 20px;
   }
@@ -44,28 +45,33 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
   text-transform: uppercase;
   height: 50px;
-  width: 150px;
+  width: 160px;
   opacity: 1;
   background-color: #ffffff;
   border: 1px solid rgba(22, 76, 167, 0.6);
+  box-shadow: inset 0 0 0 0 #ffa07a;
+  transition: ease-out 0.3s;
 
   &__span {
-    color: blue;
-    font-size: 12px;
+    color: #8b008b;
+    font-size: 15px;
     font-weight: 500;
     letter-spacing: 0.7px;
   }
 }
 
-//animations not working
 .button:hover {
-  animation: rotate 0.7s ease-in-out both;
+  box-shadow: inset 160px 0 0 0 #ffa07a;
+  cursor: pointer;
+  transform: translate(5px, 5px);
 }
 
-.button:hover span {
-  animation: storm 0.7s ease-in-out both;
-  animation-delay: 0.6s;
+.button:hover::after {
+  transform: translate(6px, 6px);
+}
+
+.button:hover::before {
+  transform: translate(12px, 12px);
 }
